[project]
name = "webbomics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anndata>=0.12.10",
    "hypothesis>=6.151.9",
    "mypy>=1.19.1",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "rich-click>=1.9.7",
    "ruff>=0.15.5",
    "scanpy>=1.12",
    "scipy>=1.17.1",
    "shap>=0.49.1",
    "spatialde>=1.1.3",
    "squidpy>=1.8.1",
    "streamlit>=1.55.0",
    "torch>=2.10.0",
    "xgboost>=3.2.0",
]
